add_library(init_commands STATIC
	arch.c
	cat.c
	cd.c
	chdir.c
	clear.c
	dmesg.c
	dumps.c
	exit.c
	findfs.c
	help.c
	initloggerd.c
	insmod.c
	loggerctl.c
	ls.c
	lsmod.c
	modprobe.c
	mountpoint.c
	rmmod.c
	setsid.c
	truefalse.c
	uname.c
	unlink.c
	version.c
	initctl.c
	adbd.c
	service.c
	reboot.c
	poweroff.c
	halt.c
	confctl.c
	conftools.c
	chvt.c
	chroot.c
	lsfd.c
	close.c
	write.c
	echo.c
	simple-init.c
	abootimg.c
	dumpinput.c
	update-binary.c
)
