add_library(init_gui STATIC
	gui_init.c
	interface/guipm/guipm.c
	interface/guipm/disk_select.c
	interface/guipm/partitions.c
	interface/filemgr/filemgr.c
	interface/filemgr/fileview.c
	interface/filemgr/filetab.c
	interface/gadget/gadget_view.c
	interface/gadget/base_info.c
	interface/widgets/filepicker.c
	interface/widgets/inputbox.c
	interface/widgets/msgbox.c
	interface/settings/backlight.c
	interface/settings/language.c
	interface/settings/theme.c
	interface/conftool/conftool.c
	interface/conftool/create.c
	interface/core/reboot.c
	interface/core/sysbar.c
	interface/core/charger.c
	interface/core/guiapp.c
	interface/apps/logviewer.c
	interface/apps/benchmark.c
	interface/apps/vibrator.c
	drivers/drm.c
	drivers/fbdev.c
	drivers/input.c
	drivers/gtk.c
	drivers/sdl2.c
	decoders/freetype.c
	decoders/png.c
	filesystem/lv_fs_string.c
	filesystem/fsext.c
	filesystem/unix.c
	drivers.c
	guidrv.c
	activity.c
	activities.c
	tools.c
)
